--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Accueil{% endblock %}
+			{% block title %}Maison{% endblock %}
 		</title>
 
 		<meta name="viewport" content="width=device-width" , initial-scale="1.0" ">
