--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,11 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Accueil
+{% endblock %}
 
-    {% block body %}
-    <h1>Bienvenue sur le trombinoscope de GEFOR !</h1>
-        
-        
-        <button type="submit" class="btn btn-primary">Envoyer</button>
-        
-    {% endblock %}
+{% block body %}
+    <main class="container">
+        <section class="row">
+            <div class="col-12"
+                    <h1>Bienvenue sur le trombinoscope de GEFOR !</h1>
+            </div>
+        </section>
+    </main>
+    
+	<button type="submit" class="btn btn-primary">Envoyer</button>
+
+{% endblock %}
