--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion
-{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block body %}
 	<section class="container my-3">
@@ -22,23 +21,23 @@
 
 					<h1 class="h3 mb-3 font-weight-normal">Me connecter</h1>
 					<label for="inputEmail">Email</label>
-					<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+					<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus><br />
 					<label for="inputPassword">Mot de passe</label>
 					<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
 					<input
 					type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-{#
-	Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-	See https://symfony.com/doc/current/security/remember_me.html
-
-	<div class="checkbox mb-3">
-		<label>
-			<input type="checkbox" name="_remember_me"> Remember me
-		</label>
-	</div>
-#}
+					{#
+						Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+						See https://symfony.com/doc/current/security/remember_me.html
+					
+						<div class="checkbox mb-3">
+							<label>
+								<input type="checkbox" name="_remember_me"> Remember me
+							</label>
+						</div>
+					#}
 
 					<button class="btn btn-lg btn-primary mt-3" type="submit">
 						Me connecter
