--- a/templates/options/new.html.twig
+++ b/templates/options/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Options{% endblock %}
 
 {% block body %}
-    <h1>Create new Options</h1>
+    <h1>Créer une nouvelle Option</h1>
 
     {{ include('options/_form.html.twig') }}
 
-    <a href="{{ path('app_options_index') }}">back to list</a>
+    <a href="{{ path('app_options_index') }}">retour à la liste</a>
 {% endblock %}
