--- a/templates/options/show.html.twig
+++ b/templates/options/show.html.twig
@@ -18,7 +18,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_options_index') }}">back to list</a>
+    <a href="{{ path('app_options_index') }}">retour à la liste</a>
 
     <a href="{{ path('app_options_edit', {'id': option.id}) }}">edit</a>
 
