V8 Affichage des formations dans des cards, au clic sur une formation affichage des élèves de cette promotion

--- a/templates/formations/edit.html.twig
+++ b/templates/formations/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Formations{% endblock %}
 
 {% block body %}
-    <h1>Edit Formations</h1>
+    <h1>Modification de la formation {{ formation.name}}</h1>
 
     {{ include('formations/_form.html.twig', {'button_label': 'Update'}) }}
 
