--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Users{% endblock %}
+{% block title %}Modification élève {% endblock %}
 
 {% block body %}
-    <h1>Edit Users</h1>
+    <h1>Modification de l'élève {{ user.firstname }} {{ user.lastname }}</h1>
 
     {{ include('users/_form.html.twig', {'button_label': 'Update'}) }}
 
