--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Users{% endblock %}
+{% block title %}Création nouvel élève{% endblock %}
 
 {% block body %}
-    <h1>Create new Users</h1>
+    <h1>Création d'un nouvel élève</h1>
 
     {{ include('users/_form.html.twig') }}
 
