--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -15,7 +15,7 @@
 					<div class="card h-100">
 						<div class="card-body">
 							<h3 class="card-title">{{ formation.name }}</h3>
-							<a href="{{ path ('eleves_list',{name:formation.name}) }}" class="btn btn-primary">Voir les photos</a>
+							<a href="{{ path ('eleves_list',{name:formation.name}) }}" class="btn btn-primary">Voir la classe</a>
 						</div>
 					</div>
 				</div>
