--- a/templates/products/details.html.twig
+++ b/templates/products/details.html.twig
@@ -5,6 +5,24 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Détails de
-		{{user.lastname}}</h1>
+	<main class="container">
+		<section class="row">
+			<div clas="col-12">
+				<h1>{{user.lastname}}
+					{{user.firstname}}</h1>
+			</div>
+			<div class="col-6">
+
+			</div>
+			<div class="col-6">
+				<p>Formation : {{user.formation.name}}</p>
+				<p>Nom : {{user.lastname}}</p>
+				<p>Prénom : {{user.firstname}}</p>
+				<p>E-mail : {{user.email}}</p>
+				<p>Tél : {{user.phone}}</p>
+			</div>
+				<img src="{{ asset('/assets/') ~ user.photo }}" class="img-fluid" alt="photo">
+		</section>
+	</main>
+
 {% endblock %}
