Ajout des annotations de sécurité dans les controllers

--- a/templates/options/index.html.twig
+++ b/templates/options/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Options index{% endblock %}
+{% block title %}Liste des options{% endblock %}
 
 {% block body %}
-    <h1>Options index</h1>
+    <h1>Liste des options</h1>
 
     <table class="table">
         <thead>
