--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,19 +3,20 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Maison2{% endblock %}
+			{% block title %}Maison2
+			{% endblock %}
 		</title>
 
 		<meta name="viewport" content="width=device-width" , initial-scale="1.0" ">
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 
-		<!--  Feuilles de styles -->
-		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">{% block stylesheets %}{% endblock %} <link
-		rel="stylesheet" href="{{ asset('assets/css/styles.css') }}" defer>
+		<!--  Feuilles de styles - déclaration du bloc permettant d’appeler les fichiers css-->
+		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">{% block stylesheets %}{% endblock %} 
+		<link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}" defer>
 
 
-		<!--   Fichiers js  -->
+		<!--   Fichiers js - déclaration du bloc permettant d’appeler les fichiers js -->
 
 		<script src="{{ asset('assets/js/bootstrap.bundle..min.js') }}" defer></script>
 
@@ -26,6 +27,7 @@
 
 	<body>
 		{% include "_partials/_nav.html.twig" %}
+<!--  déclaration du bloc qui nous permettra de modifier le corps de nos pages -->
 
 		{% block body %}{% endblock %}
 
