--- a/templates/formations/edit.html.twig
+++ b/templates/formations/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('formations/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_formations_index') }}">back to list</a>
+    <a href="{{ path('app_formations_index') }}">retour à la liste</a>
 
     {{ include('formations/_delete_form.html.twig') }}
 {% endblock %}
