--- a/templates/formations/index.html.twig
+++ b/templates/formations/index.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Formations index{% endblock %}
+{% block title %}Liste des formations{% endblock %}
 
 {% block body %}
-    <h1>Formations index</h1>
+    <h1>Liste des formations du Groupe GEFOR</h1>
 
     <table class="table">
         <thead>
-            <tr>
+            <tr> 
                 <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
+                <th>Nom de la formation</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -19,8 +19,8 @@
                 <td>{{ formation.id }}</td>
                 <td>{{ formation.name }}</td>
                 <td>
-                    <a href="{{ path('app_formations_show', {'id': formation.id}) }}">show</a>
-                    <a href="{{ path('app_formations_edit', {'id': formation.id}) }}">edit</a>
+                    <a href="{{ path('app_formations_show', {'id': formation.id}) }}">Consulter</a>
+                    <a href="{{ path('app_formations_edit', {'id': formation.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -31,5 +31,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_formations_new') }}">Create new</a>
+    <a href="{{ path('app_formations_new') }}">Créer nouvelle</a>
 {% endblock %}
