--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('users/_form.html.twig') }}
 
-    <a href="{{ path('app_users_index') }}">back to list</a>
+    <a href="{{ path('app_users_index') }}">retour à la liste</a>
 {% endblock %}
